# Personal-Cookiecutter-Templates

./: README.md
c++/: cookiecutter.json
c++/{{Cookiecutter.directory_name}}/: .dir-locals.el  .gitignore  CHANGELOG.md
c++/{{Cookiecutter.directory_name}}/src/: CMakeLists.txt
c++/{{cookiecutter.directory_name}}/: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile
c++/{{cookiecutter.directory_name}}/include/smren/devices/: Devices.hpp
c++/{{cookiecutter.directory_name}}/src/: CMakeLists.txt  main.cpp
c++/{{cookiecutter.directory_name}}/src/devices/: CMakeLists.txt  Devices.cpp
c++/{{cookiecutter.directory_name}}/tests/: CMakeLists.txt  device_test.cpp  hello_test.cpp
c++/{{cookiecutter.name}}/: CMakeLists.txt  CMakePresets.json  README.md
c++/{{cookiecutter.name}}/tests/: CMakeLists.txt
